[tool.poetry]
name = "songwhip_api"
version = "0.2.2"
description = ""
authors = ["ульба <ulbwa@icloud.com>"]
readme = "README.md"
packages = [{include = "songwhip_api"}]

[tool.poetry.dependencies]
python = "^3.10"
orjson = "^3.8.10"
pydantic = "^1.10.7"
html5lib = "^1.1"
pytz = "^2023.3"
aiohttp = "^3.8.4"
aiohttp-client-cache = "^0.8.1"
aiofiles = "^23.1.0"
aiosqlite = "^0.19.0"
aiohttp-proxy = "^0.1.2"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
