[tool.poetry]
name = "songwhip_api"
version = "0.4.4"
description = "A fast and asynchronous wrapper for the SongWhip written in Python."
authors = ["ульба <ulbwa@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
orjson = "^3.9.14"
aiohttp-client-cache = "^0.11.0"
aiohttp-proxy = "^0.1.2"
fake-headers = "^1.0.2"
pydantic = "^2.6.1"
aiofiles = "^23.2.1"
aiosqlite = "^0.19.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
